--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Wedding Laura and Ruben" />
         <meta name="author" content="Wedding Laura and Ruben" />
+		<meta name="robots" content="noindex">
         <title>Wedding Laura and Ruben</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
