--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Wedding Laura and Ruben" />
-        <meta name="author" content="Wedding Laura and Ruben" />
+        <meta name="description" content="Wedding Laura & Ruben" />
+        <meta name="author" content="Wedding Laura & Ruben" />
 		<meta name="robots" content="noindex">
-        <title>Wedding Laura and Ruben</title>
+        <title>Wedding Laura & Ruben</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/gif" href="assets/icons8-romance.gif" />
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -23,12 +23,12 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Laura's and Ruben's wedding</a>
+                <a class="navbar-brand" style="font-family:EB Garamond, serif;font-style:italic;" href="#page-top">Laura's & Ruben's wedding</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#RSVP">RSVP</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#RSVP">Save Our Date</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -36,21 +36,33 @@
 		</nav>
         <!-- Masthead-->
         <header class="masthead" id="home">
-            <div class="container px-4 px-lg-5 h-100">
-                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Welcome to Laura's and Ruben's wedding!</h1>
-                        <hr class="divider" />
+            <div class="container px-4 px-lg-5 h-25">
+			<div class="row gx-4 gx-lg-5 h-75 align-items-center justify-content-center text-center">
+                    <div class="col-lg-5 align-self-end">
+						<br>
+											<h4 class="text-white">Together with their families</h4>
 					</div>
+					</div>
+								<div class="row gx-4 gx-lg-5 h-75  align-items-center justify-content-center text-center">
+					<div class="col-lg-8 align-self-end">		
+                        <h1 class="text-white font-weight-bold" style="font-style:italic;">Laura & Ruben</h1>
+					</div>
+										</div>	
+													<div class="row gx-4 gx-lg-5 h-75  align-items-center justify-content-center text-center">
+					  <div class="col-lg-5 align-self-end">
+											<h4 class="text-white">joyfully invite you to their wedding celebration</h4>
+											                        <hr class="divider" />
+					</div>
+										</div>													
 					<div class="row justify-content-md-center my-auto">
 						<div class="col-lg-4 col-md-4 text-center my-auto">
 							<div class="mt-2">
-								<a class="btn btn-primary btn-xl" href="#RSVP">RSVP</a> 
+								<a class="btn btn-primary btn-xl" href="#RSVP">Save our Date</a> 
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 text-center my-auto">
 							<div class="mt-2">
-								<a class="btn btn-primary btn-xl" href="index_encrypted.html"> Celebration in Valencia <br> (password protected) </a>
+								<a class="btn btn-primary btn-xl" href="index_encrypted.html"> Celebration in Valencia <br> (with protected) </a>
 							</div>
 						</div>
 					</div>
@@ -140,20 +152,20 @@
 						<div class="col-12">
 									<div class="form-floating mb-3">
 										<input type="text" class="form-control" name="entry.1433709179" id="inputInterest">
-									    <label for="inputInterest" class="form-label">Would you be interested in joining? (Yes/No/Maybe)</label>
+									    <label for="inputInterest" class="form-label">Interested in joining? (Yes/No/Maybe)</label>
 									</div>
 								</div>
 							<div class="row g-2">
 								<div class="col-6">
 									<div class="form-floating mb-3">
 										<input class="form-control" id="inputAdults" name="entry.59073892" type="text" data-sb-validations="required" />
-										<label for="inputAdults">Nr. of Adults joining</label>
+										<label for="inputAdults">Nr. of Adults</label>
 									</div>	
 								</div>	
 								<div class="col-6">
 									<div class="form-floating mb-3">
 										<input class="form-control" id="inputChildren" name="entry.1158705370" type="text" data-sb-validations="required" />
-										<label for="inputChildren">Nr. of children (till age 12)</label>
+										<label for="inputChildren">Nr. of children </label>
 									</div>	
 								</div>
 							</div>					
@@ -171,12 +183,12 @@
 			<!-- Contact-->
 			<section class="page-section bg-primary" id="contact">
 				<div class="container px-2 px-lg-5">
-					<h2 class="text-center mt-0">Contact us in case of questions.</h2>
+					<h2 class="text-center mt-0">Contact us in case of questions</h2>
 					<hr class="divider divider-light"  />
 					<div class="row gx-2 gx-lg-5">
 					<div class="col-lg col-md text-center">
 					<div class="mt-2">
-					<div class="mb-2"><i class="bi-envelope fs-1 text-white"></i></div>
+					<div class="mb-2"><i class="bi-envelope fs-1"></i></div>
 					<h3 class="h4 mb-2">E-mail</h3>
 					<a href="mailto:lauruelpiv@gmail.com?subject=Question regarding the wedding">lauruelpiv[at]gmail.com</a></p>
 					</div>
