--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
         <header class="masthead" id="home">
             <div class="container px-4 px-lg-5 h-25">
 			<div class="row gx-4 gx-lg-5 h-75 align-items-center justify-content-center text-center">
-                    <div class="col-lg-5 align-self-end">
-						<br>
-											<h4 class="text-white">Together with their families</h4>
-					</div>
 					</div>
 								<div class="row gx-4 gx-lg-5 h-75  align-items-center justify-content-center text-center">
 					<div class="col-lg-8 align-self-end">		
@@ -53,16 +49,24 @@
 											<h4 class="text-white">joyfully invite you to their wedding celebration</h4>
 											                        <hr class="divider" />
 					</div>
-										</div>													
-					<div class="row justify-content-md-center my-auto">
+										</div>	
+																	    
+					<div class="row justify-content-md-center my-auto align-self-baseline">
+					 <div class = "col-lg-2">
+					 </div>
+					 <div class="col-lg-8 text-center">
+                        <p class="text-white-75 mb-5">Find more information below</p>
+                    </div>
+					<div class = "col-lg-2">
+					 </div>
 						<div class="col-lg-4 col-md-4 text-center my-auto">
 							<div class="mt-2">
 								<a class="btn btn-primary btn-xl" href="#RSVP">Save our Date</a> 
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 text-center my-auto">
+						<div class="col-lg-4 col-md-4 text-center my-auto align-self-baseline">
 							<div class="mt-2">
-								<a class="btn btn-primary btn-xl" href="index_encrypted.html"> Celebration in Valencia <br> (with protected) </a>
+								<a class="btn btn-primary btn-xl" href="index_encrypted.html"> Celebration in Valencia <br> (with password) </a>
 							</div>
 						</div>
 					</div>
@@ -75,9 +79,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">Provide us with your details for the invitation.</h2>
+                        <h2 class="mt-0">Provide us with your details for the invitation</h2>
                         <hr class="divider" />
-                        <p class="text-muted mb-5"> The invitation will be sent to you independent of your response below.</p>
+                        <p class="text-muted mb-5"> The invitation will be sent to you regardless of your responses below.</p>
 					</div>
 				</div>
 				
