--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 					<div class="col-lg-8 align-self-end">		
                         <h1 class="text-white font-weight-bold" style="font-style:italic;">Laura & Ruben</h1>
 					</div>
-										</div>	
+					</div>	
 													<div class="row gx-4 gx-lg-5 h-75  align-items-center justify-content-center text-center">
-					  <div class="col-lg-5 align-self-end">
-											<h4 class="text-white">joyfully invite you to their wedding celebration</h4>
+					  <div class="col-lg-4 align-self-end">
+											<p class="text-white">joyfully invite you to their wedding celebration</p>
 											                        <hr class="divider" />
 					</div>
 										</div>	
