--- a/index_encrypted.html
+++ b/index_encrypted.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Protected Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" type="image/gif" href="assets/icons8-romance.gif" />
+ <meta name="description" content="Wedding Laura & Ruben" />
+        <meta name="author" content="Wedding Laura & Ruben" />
+		<meta name="robots" content="noindex">
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
     <meta http-equiv="cache-control" content="no-cache"/>
